添加cargo插件